# kitchen-pooling-model

./: README.md  agenticai_kitchen_pooling_code.ipynb  eda_kitchen_pooling_model.ipynb  kitchen_pooling_model.csv  kitchen_pooling_model.ipynb  main.py  pyproject.toml  requirements.txt
